--- a/anatomy/midterm/midterm.html
+++ b/anatomy/midterm/midterm.html
@@ -106,10 +106,15 @@
             <p><b>頭部</b></p>
             <input type="checkbox" data-id="headBones_" checked> 骨頭 <br />
             <input type="checkbox" data-id="headMuscles_" checked> 肌肉 <br />
+            <input type="checkbox" data-id="headVessels_" checked> 血管 <br />
+            <input type="checkbox" data-id="headNerves_" checked> 神經 <br />
           </div>
           <div class="checkboxRow">
             <p><b>頸部</b></p>
-            <input type="checkbox" data-id="neck_" checked> 頸部 <br />
+            <input type="checkbox" data-id="neckBones_" checked> 骨頭 <br />
+            <input type="checkbox" data-id="neckMuscles_" checked> 肌肉 <br />
+            <input type="checkbox" data-id="neckVessels_" checked> 血管 <br />
+            <input type="checkbox" data-id="neckNerves_" checked> 神經 <br />
           </div>
           <div class="checkboxRow">
             <p><b>備用</b></p>
