--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
         <div class="section-title"><b>解剖學</b></div>
         <div class="link-text" style="top:26%;"><a href="/My-Project/anatomy/midterm/midterm.html" target="_blank">Midterm Ch-En</a></div>
             <!-- 第一條連結，Midterm中翻英 -->
-        <div class="link-text" style="top:32%;"><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">Midterm Mock test</a></div>
-            <!-- 第二條連結 Midterm跑台 -->
+        <div class="link-text" style="top:32%;"><a href="/My-Project/anatomy/midterm2/midterm2.html" target="_blank">Midterm2 Ch-En </a></div>
+            <!-- 第二條連結 Midterm2中翻英&跑台 -->
         <div class="link-text" style="top:38%;"><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">Finals Ch-En</a></div>
             <!-- 第三條連結 Finals中翻英 -->
         <div class="link-text" style="top:44%;"><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">Finals Mock test</a></div>
