--- a/pathology/final.html
+++ b/pathology/final.html
@@ -134,6 +134,6 @@
     <p id="name">1101037</p>
   </div>
 
-  <script type="text/javascript" src="midterm2.js"></script>
+  <script type="text/javascript" src="final.js"></script>
 </body>
 </html>
