--- a/anatomy-video/video.html
+++ b/anatomy-video/video.html
@@ -20,7 +20,7 @@
     <option value="陳欽昶">陳欽昶</option>
   </select>
   <p id="test"></p>
-  <p id="sign">1101037</p>
+  <div id="sign">1101037</div>
 
   <script type="text/javascript" src="video.js"></script>
 </body>
