--- a/anatomy-video/video.html
+++ b/anatomy-video/video.html
@@ -18,6 +18,9 @@
     <option value="林聖怡">林聖怡</option>
     <option value="曾拓榮">曾拓榮</option>
     <option value="陳欽昶">陳欽昶</option>
+    <option value="朱培銘">朱培銘</option>
+    <option value="廖智凱">廖智凱</option>
+    <option value="陳儷友">陳儷友</option>
   </select>
   <p id="test"></p>
   <div id="sign" class="1101037"></div>
