--- a/anatomy-video/video.html
+++ b/anatomy-video/video.html
@@ -13,6 +13,7 @@
   </style>
 </head>
 <body>
+  <p style="font-size: small; margin-top: -1px; margin-bottom: -1px;">*剛啟動網頁需要一小點時間整理資料*</p>
   <select id="select" name="選擇老師">
     <option value="蔡如愔">蔡如愔</option>
     <option value="林聖怡">林聖怡</option>
