--- a/anatomy-video/video.html
+++ b/anatomy-video/video.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>中山醫醫學111級解剖實驗影片</title>
   <style>
     p {
       color: black;
@@ -14,6 +15,7 @@
 </head>
 <body>
   <p style="font-size: small; margin-top: -1px; margin-bottom: -1px;">*剛啟動網頁需要一小點時間整理資料*</p>
+  <label for="select" style="font-size: small;">目前顯示老師：</label>
   <select id="select" name="選擇老師">
     <option value="蔡如愔">蔡如愔</option>
     <option value="林聖怡">林聖怡</option>
