--- a/anatomy-video/video.html
+++ b/anatomy-video/video.html
@@ -5,31 +5,83 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>中山醫醫學111級解剖實驗影片</title>
   <style>
-    p {
-      color: black;
+    :root {
+      --accentColor: rgb(214, 214, 214);
+      --unAccentColor: rgb(34, 34, 34);
     }
+
+    #container {
+      padding: 0.5vw 0.5vw 0 0.5vw;
+    }
+
+    #darkButton {
+      position: absolute;
+      right: 15px;
+    }
+
     #sign {
       display: none;
     }
+
     h3 {
       margin-bottom: -12px;
+    }
+
+    a:link {
+        color: rgb(26, 80, 188);
+    }
+
+    a:visited {
+      color: rgb(83, 51, 200);
+    }
+
+    a:hover, a:active {
+      color: rgb(222, 55, 72);
+    }
+
+    .dark-mode {
+      background-color: var(--unAccentColor);
+      color: var(--accentColor);
+      a:link {
+        color: rgb(184, 207, 252);
+      }
+      a:visited {
+        color: rgb(195, 181, 245);
+      }
+      a:hover, a:active {
+      color: rgb(203, 146, 151);
+      }
+      #select {
+        background-color: var(--unAccentColor);
+        color: var(--accentColor);
+      }
+      #darkButton {
+        background-color: rgb(79, 79, 79);
+        color: var(--accentColor);
+      }
     }
   </style>
 </head>
 <body>
-  <p style="font-size: small; margin-top: -1px; margin-bottom: -1px;">*剛啟動網頁需要一小點時間整理資料*</p>
-  <label for="select" style="font-size: small;">目前顯示老師：</label>
-  <select id="select" name="選擇老師">
-    <option value="蔡如愔">蔡如愔</option>
-    <option value="林聖怡">林聖怡</option>
-    <option value="曾拓榮">曾拓榮</option>
-    <option value="陳欽昶">陳欽昶</option>
-    <option value="朱培銘">朱培銘</option>
-    <option value="廖智凱">廖智凱</option>
-    <option value="陳儷友">陳儷友</option>
-  </select>
-  <p id="test"></p>
-  <div id="sign" class="1101037"></div>
+  <div id="container">
+    <button id="darkButton" onclick="toggleDark()">暗色模式</button>
+
+    <p style="font-size: small; margin-top: -1px; margin-bottom: -1px;">*剛啟動網頁需要一小點時間整理資料*</p>
+
+    <label for="select" style="font-size: small;">目前顯示老師：</label>
+    <select id="select" name="選擇老師">
+      <option value="蔡如愔">蔡如愔</option>
+      <option value="林聖怡">林聖怡</option>
+      <option value="曾拓榮">曾拓榮</option>
+      <option value="陳欽昶">陳欽昶</option>
+      <option value="朱培銘">朱培銘</option>
+      <option value="廖智凱">廖智凱</option>
+      <option value="陳儷友">陳儷友</option>
+    </select>
+
+    <p id="test"></p>
+    <div id="sign" class="1101037"></div>
+  </div>
 
   <script type="text/javascript" src="video.js"></script>
 </body>
