--- a/anatomy-video/video.html
+++ b/anatomy-video/video.html
@@ -42,23 +42,29 @@
     .dark-mode {
       background-color: var(--unAccentColor);
       color: var(--accentColor);
-      a:link {
-        color: rgb(184, 207, 252);
-      }
-      a:visited {
-        color: rgb(195, 181, 245);
-      }
-      a:hover, a:active {
+    }
+
+    .dark-mode a:link {
+      color: rgb(184, 207, 252);
+    }
+
+    .dark-mode a:visited {
+      color: rgb(195, 181, 245);
+    }
+
+    .dark-mode a:hover, 
+    .dark-mode a:active {
       color: rgb(203, 146, 151);
-      }
-      #select {
-        background-color: var(--unAccentColor);
-        color: var(--accentColor);
-      }
-      #darkButton {
-        background-color: rgb(79, 79, 79);
-        color: var(--accentColor);
-      }
+    }
+
+    .dark-mode #select {
+      background-color: var(--unAccentColor);
+      color: var(--accentColor);
+    }
+
+    .dark-mode #darkButton {
+      background-color: rgb(79, 79, 79);
+      color: var(--accentColor);
     }
   </style>
 </head>
