--- a/anatomy-video/video.html
+++ b/anatomy-video/video.html
@@ -17,6 +17,14 @@
     #darkButton {
       position: absolute;
       right: 15px;
+      z-index: 1;
+    }
+
+    #topButton {
+      display: none;
+      position: fixed;
+      right: 15px;
+      z-index: 0;
     }
 
     #sign {
@@ -66,11 +74,17 @@
       background-color: rgb(79, 79, 79);
       color: var(--accentColor);
     }
+
+    .dark-mode #topButton {
+      background-color: rgb(79, 79, 79);
+      color: var(--accentColor);
+    }
   </style>
 </head>
 <body>
   <div id="container">
     <button id="darkButton" onclick="toggleDark()">暗色模式</button>
+    <button onclick="topFunction()" id="topButton" title="回到頂部">回到頂部</button>
 
     <p style="font-size: small; margin-top: -1px; margin-bottom: -1px;">*剛啟動網頁需要一小點時間整理資料*</p>
 
