--- a/anatomy-video/video.html
+++ b/anatomy-video/video.html
@@ -24,7 +24,8 @@
       display: none;
       position: fixed;
       right: 15px;
-      z-index: 0;
+      bottom: 15px;
+      z-index: 99;
     }
 
     #sign {
