--- a/anatomy-video/video.html
+++ b/anatomy-video/video.html
@@ -100,7 +100,7 @@
       <option value="陳儷友">陳儷友</option>
     </select>
 
-    <a href="https://drive.google.com/drive/folders/1NyziLF629E0Sn_bBoDCXnPJDEe7vXssw?usp=sharing" style="font-size:small; margin-left: 20px;">考點</a>
+    <a href="https://drive.google.com/drive/folders/1NyziLF629E0Sn_bBoDCXnPJDEe7vXssw?usp=sharing" style="font-size:small; margin-left: 20px;">下肢考點</a>
     
     <p id="test"></p>
     <div id="sign" class="1101037"></div>
