--- a/anatomy-video/video.html
+++ b/anatomy-video/video.html
@@ -87,7 +87,7 @@
     <button id="darkButton" onclick="toggleDark()">暗色模式</button>
     <button onclick="topFunction()" id="topButton" title="回到頂部">回到頂部</button>
 
-    <p style="font-size: small; margin-top: -1px; margin-bottom: -1px;">*剛啟動網頁需要一小點時間整理資料*</p>
+    <p style="font-size: small; margin-top: -1px; margin-bottom: -1px;">*剛啟動網頁需要一小點時間整理資料*　　4/2：大家考試辛苦了! 希望網頁有幫到各位</p>
 
     <label for="select" style="font-size: small;">目前顯示老師：</label>
     <select id="select" name="選擇老師">
@@ -99,8 +99,6 @@
       <option value="廖智凱">廖智凱</option>
       <option value="陳儷友">陳儷友</option>
     </select>
-
-    <a href="https://drive.google.com/drive/folders/1NyziLF629E0Sn_bBoDCXnPJDEe7vXssw?usp=sharing" style="font-size:small; margin-left: 20px;">下肢考點</a>
     
     <p id="test"></p>
     <div id="sign" class="1101037"></div>
